# realestate-mcp

./: AGENTS.md  LICENSE  README.md  pyproject.toml  setup.bat  teardown.bat
.claude/agents/: airbnb-schema-doctor.md  mcp-service-bootstrapper.md  python-reviewer.md  test-author.md  test-mender.md
.claude/skills/check-mcp-drift/: SKILL.md
scripts/: build_obx_xlsx.py  check_mcp_drift.py  fetch_carolinadesigns_aug15.py  fetch_surforsound_aug15.py  fetch_twiddy_aug15.py
src/realestate_mcp/servers/airbnb/: _client.py  server.py
src/realestate_mcp/servers/carolinadesigns/: _client.py  server.py
src/realestate_mcp/servers/churchrealty/: _client.py  server.py
src/realestate_mcp/servers/crexi/: _client.py  server.py
src/realestate_mcp/servers/loopnet/: server.py
src/realestate_mcp/servers/redfin/: _client.py  server.py
src/realestate_mcp/servers/sunrealty/: _client.py  server.py
src/realestate_mcp/servers/surforsound/: _client.py  server.py
src/realestate_mcp/servers/twiddy/: _client.py  server.py
src/realestate_mcp/servers/vrbo/: server.py
src/realestate_mcp/servers/zillow/: server.py
tests/: test_airbnb_helpers.py  test_airbnb_parsers.py  test_airbnb_search.py  test_carolinadesigns_helpers.py  test_carolinadesigns_parsers.py  test_carolinadesigns_search.py  test_churchrealty_helpers.py  test_churchrealty_parsers.py  test_churchrealty_search.py  test_crexi_helpers.py  test_crexi_parsers.py  test_crexi_search.py  test_redfin_helpers.py  test_redfin_parsers.py  test_redfin_search.py  test_smoke.py  test_sunrealty_helpers.py  test_sunrealty_parsers.py  test_sunrealty_search.py  test_surforsound_helpers.py  test_surforsound_parsers.py  test_surforsound_search.py  test_twiddy_helpers.py  test_twiddy_parsers.py  test_twiddy_search.py
